[package]
name = "climb"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0.0"
structopt = { version = "0.3.14", features = ["paw"] }
sexp = "1.1.4"
termion = "1.5.5"
tui = "0.9.5"
unicode-width = "0.1.7"
